<resources>
    <string name="app_name">Digipay Electronic Learning</string>
    <string name="thanks_message">Thank you for taking time to answer the Microinsurance Agent Test. Click the button below to see your accuracy</string>
    <string name="next">Next</string>
    <string name="see_accuracy">See Accuracy</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="invalid_password">Password must be at least 8 characters and must consist of
        1 uppercase, 1 lowercase and 1 numeric character.</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register</string>
    <string name="prompt_confirm_password">Confirm Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_questionnaire_management">QuestionnaireManagementActivity</string>
    <string name="add_questionnaire_success_msg">Questionnaire has been added</string>
    <string name="update_questionnaire_success_msg">Questionnaire has been updated</string>
    <string name="update_questionnaire_btn">Update Questionnaire</string>
    <string name="add_questionnaire_btn">Add new Questionnaire</string>

    <string name="continue_ssl">Continue</string>
    <string name="invalid_ssl">Invalid Error SSL Certification</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_admin_main">AdminMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="select_module">Select Module:</string>
</resources>
